fixed carousel spacing

--- a/Style.css
+++ b/Style.css
@@ -1,10 +1,11 @@
 .carousel-inner {
   max-height: 600px;
-  min-height: 600px;
+
   max-width: 100%;
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 0px;
 }
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
@@ -72,7 +73,7 @@ nav{
 }
 .dsc{
   max-width: 75%;
-  margin-top: 15px;
+ margin-top: 10px;
   display: block;
   margin-left: auto;
   margin-right: auto;
